<resources>
    <string name="app_name">Health Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_weight_tracker">WeightTracker</string>
    <!-- bp   -->
    <string name="title_activity_bp">Record Blood Pressure</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="systolic">Systolic (mmHg)</string>
    <string name="diastolic">Diastolic (mmHg)</string>
    <string name="heartrate">Heart Rate (bpm)</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title_activity_main">Health Tracker</string>
    <string name="title_activity_graphs">Graphs and Reporting</string>
    <string name="title_activity_medications">Manage Medications</string>
    <string name="title_activity_add_medications">Add Medications</string>
    <string name="Medication">Medication</string>
    <string name="Dosage">Dosage</string>
    <string name="AddMedication">Add Medication</string>
    <string name="submit">Save</string>
    <string name="cancel">Cancel</string>
    <string name="TimesADay">Times a day</string>
    <string name="title_activity_show_bpdata">Blood Pressure</string>
    <string name="title_activity_show_lipid_profile">Lipid Profile</string>
    <string name="title_activity_lipid">Record Lipid Profile</string>
    <string name="totalcholesterol">Total Cholesterol\n(mg/dL)</string>
    <string name="ldl">LDL (mg/dL)</string>
    <string name="hdl">HDL (mg/dL)</string>
    <string name="triglycerides">Triglycerides\n(mg/dL)</string>
    <string name="title_activity_bpgraphs">Blood Pressure Graphs</string>
    <string name="title_activity_latest_health_records">LatestHealthRecords</string>
    <string name="title_activity_nearest_hospitals_to_me_now">NearestHospitalsToMeNow</string>
    <string name="title_activity_lipid_graphs">Lipid Graphs</string>
    <string name="title_activity_weight_graphs">Weight Graphs</string>
    <string name="title_activity_show_weight_profile">Weight Profile</string>
    <string name="title_activity_weight">Weight</string>
    <string name="weight">Weight (lb)</string>
    <string name="height">Height (inches)</string>
    <string name="waist">Waist (inches)</string>
    <string name="title_activity_latest_health_data">Latest Health Report</string>
    <string name="title_activity_nearest_hospitals">Current Location</string>
    <string name="title_activity_medical_appointments">Medical Appointments</string>
    <string name="title_activity_add_appointment">Add Appointment</string>
    <string name="appointmentdate">Date</string>
    <string name="checkup">Appointment for</string>
    <string name="hospital">Hospital</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="profilepicture">Profile Picture</string>
    <string name="weightgraph">Weight Graph</string>
    <string name="bpgraph">BP Graph</string>
    <string name="lipidgraph">Lipid Graph</string>
    <string name="title_activity_show_health_goals">Health Goals</string>
    <string name="title_activity_goal">Add Health Goal</string>
    <string name="goal">Goal</string>
    <string name="targetdate">Target Date</string>
    <string name="title_activity_show_kidney_function">Kidney Function Data</string>
    <string name="title_activity_add_kidney_function">Record Kidney Function Result</string>
    <string name="gfr">GFR (mL/min)</string>
    <string name="creatinine">Creatinine (mg/dL)</string>
    <string name="kidneyfunctiondate">Date</string>
    <string name="title_activity_show_thyroid_profile">Thyroid Profile</string>
    <string name="title_activity_show_sugar_profile">Glucose Profile</string>
    <string name="title_activity_add_thyroid_data">Record Thyroid Result</string>
    <string name="title_activity_add_sugar_data">Record Glucose Result</string>
    <string name="tsh">TSH (uIU/mL)</string>
    <string name="freet4">Free T4 (ng/dL)</string>
    <string name="freet3">Free T3 (ng/dL)</string>
    <string name="glucose">Glucose (mg/dL)</string>
    <string name="gender">Gender</string>
    <string name="title_activity_vitals_page">Vitals Page</string>
    <string name="vitals_name">Medical Results</string>
    <!-- new strings -->
    <string name="medicalreport">Medical Report</string>
    <string name="emailreport">Email Report</string>
    <string name="location">Location</string>
    <string name="graphs">Graphs</string>
    <string name="bloodpressure">Blood Pressure</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="kidneyfunction">Kidney Function</string>
    <string name="thyroid">Thyroid</string>
    <string name="weightreport">Weight</string>
    <string name="heightreport">Height</string>
    <string name="bloodpressureprofile">Blood Pressure Profile</string>
    <string name="systolicreport">Systolic</string>
    <string name="diastolicreport">Diastolic</string>
    <string name="heartratereport">Heart Rate</string>
    <string name="lipidprofile">Lipid Profile</string>
    <string name="chloesterolreport">Cholesterol</string>
    <string name="ldlreport">LDL</string>
    <string name="hdlreport">HDL</string>
    <string name="triglyceridesreport">Triglycerides</string>
    <string name="trackvitals">Track Vitals</string>
    <string name="managemedications">Manage Medications</string>
    <string name="medicalappointments">Medical Appointments</string>
    <string name="healthgoals">Health Goals</string>
    <string name="graphsreporting">Graphs and Reporting</string>
    <string name="profile">Profile</string>
    <string name="appointment">Appointment</string>
    <string name="medication">Medication</string>
    <string name="dosage">Dosage</string>
    <string name="time1">Time1</string>
    <string name="time2">Time2</string>
    <string name="time3">Time3</string>
    <string name="time4">Time4</string>
    <string name="gfrreport">GFR</string>
    <string name="creatininereport">Creatinine</string>
    <string name="glucosereport">Glucose</string>
    <string name="tshreport">TSH</string>
    <string name="freet4report">Free T4</string>
    <string name="freet3report">Free T3</string>
    <string name="weightprofile">Weight Profile</string>
    <string name="waistreport">Waist</string>
    <string name="title_activity_nearest_medical_location">Hospitals Nearby</string>
    <string name="yourlocation">Your Current Location:</string>
    <string name="NearbyHospitals">Hospitals Nearby (sorted on distance)</string>
    <string name="title_activity_medication_notifications">MedicationNotifications</string>
    <string name="title_activity_show_bpgraph">ShowBPGraph</string>
</resources>

